Solved cells take normal width instead of stretching out till end

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
 }
 
 .data-table {
-  @apply w-full border-separate border-spacing-0;
+  @apply border-separate border-spacing-0;
 }
 
 .data-table thead {
